<?xml version="1.0"?>
<package>
  <name>ros_tutorials</name>
  <version>0.0.1</version>
  <description>The my_first_ros_pkg package</description>
  <license>Apache license 2.0</license>
  <author email="junghwanyim@todo.todo">junghwanyim</author>
  <maintainer email="junghwanyim@todo.todo">junghwanyim</maintainer>
  <url type="bugtracker">http://www.robotics.com</url>
  <url type="repository">http://www.robotics.com</url>
  <url type="website">http://www.robotics.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export></export>
</package>
